--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,10 +1,13 @@
 .header {
-  height: 15vh;
-  position: absolute;
+  height: 10vh;
+  width: 90vw;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0% 5%;
+  padding: 0 5%;
+  overflow: hidden;
+  z-index: 21;
 }
 
 .logo img {
@@ -17,12 +20,11 @@
 .menu {
   height: 100%;
   min-width: 40vw;
-  display: inline-flex;
-  align-content: center;
-  /* background-color: #bb4f87; */
   display: flex;
-  justify-content: center;
+  align-content: center;
+  justify-content: space-between;
   padding: 0;
+  transition: 0.3s linear all;
 }
 
 .menu li h6 {
@@ -30,6 +32,7 @@
   justify-content: center;
   align-items: center;
   padding: 3% 0%;
+  transition: 0.3s linear all;
 }
 
 .menu li {
